# OppaiOracle

./: .gitignore  .python-version  AGENTS.md  CODEBASE_OVERVIEW.md  Configuration_System.py  Dataset_Analysis.py  Evaluation_Metrics.py  HDF5_loader.py  ISSUES.md  Inference_Engine.py  LICENSE  Monitor_log.py  ONNX_Export  ONNX_Export.py  PERFORMANCE_ANALYSIS_REPORT.md  Progessive_model.py  Progressive_model.py  README.md  Start_AI_Training.ps1  TODO.MD  TODO.md  TRAINING_PIPELINE_MAP.md  Tags_ignore.txt  adan_optimizer.py  analyze_tag_counts.py  auto_training_setup.py  benchmark_vocab_load.py  bugs.txt  cache_codec.py  cache_warmup.py  changes_git.patch  check_bf16_support.py  check_for_lost_files.py  checkpoint_bug_report.MD  cleanup_orphans.py  copy_test_files.py  count_dataset.py  count_files.py  create_huge_png.py  create_large_png.py  (+70 more)
TEst and review/: batch_evaluate.py  live_viewer.py  visualize_results.py
analysis/: Dataset_Analysis.py  analyze_cache_dtype.py  analyze_issues.py  count_dataset.py  count_files.py
cache_warmup/: __init__.py  __main__.py  gpu_batch_processor.py  l2_cache_warmup.py
configs/: MIGRATION.md  README.md  augmentation.yaml  dataloader.yaml  dataset_prep.yaml  export_config.yaml  inference_config.yaml  logging.yaml  orientation_map.README.md  orientation_map.json  paths.yaml  runtime.yaml  train_config.yaml  training_config.yaml  unified_config.yaml  validation_config.yaml  vocabulary.yaml
data_preparation/: check_for_lost_files.py  cleanup_orphans.py  downsample_images_nas.py  filter_low_tag_images.py
dataset_cleaning/: __init__.py
(+58 files in other folders)
